samples/_failures_safe/1761513823_207dc0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_057a762d.c: In function ‘main’:
./samples/SAFE/__tmp_057a762d.c:167:12: error: missing terminating " character
  167 |     printf("\n
      |            ^~~
./samples/SAFE/__tmp_057a762d.c:167:5: error: expected expression at end of input
  167 |     printf("\n
      |     ^~~~~~
./samples/SAFE/__tmp_057a762d.c:167:5: error: expected declaration or statement at end of input
